# execo_rag

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/execo_rag/: __init__.py
src/execo_rag/api/: __init__.py  app.py  deps.py
src/execo_rag/api/routes/: health.py  ingest.py  query.py  query_agent.py
src/execo_rag/api/schemas/: __init__.py  agent_query.py  ingest.py  query.py
src/execo_rag/clients/: __init__.py  openrouter.py
src/execo_rag/config/: __init__.py  constants.py  settings.py
src/execo_rag/logging/: __init__.py  boundaries.py  context.py  exc_handler.py  formatters.py  logger.py  metrics.py
src/execo_rag/models/: __init__.py  chunk.py  common.py  document.py  embedding.py  extraction.py  metadata.py  pinecone.py  pipeline_state.py
src/execo_rag/prompts/: answer_synthesis.txt  metadata_extraction.txt  metadata_verification.txt  query_analysis.txt  query_refinement.txt
src/execo_rag/repositories/: __init__.py  artifact_repository.py  document_repository.py
src/execo_rag/services/: __init__.py
src/execo_rag/services/chunking/: __init__.py  enricher.py  hybrid_chunker.py  section_detector.py  token_counter.py  validator.py
src/execo_rag/services/embeddings/: __init__.py  provider.py
src/execo_rag/services/ingestion/: __init__.py  cleaner.py  extractor.py  ingest_service.py  loader.py
src/execo_rag/services/metadata/: __init__.py  extractor.py  normalizer.py  rules.py  verifier.py
src/execo_rag/services/orchestration/: __init__.py  graph.py  nodes.py  routing.py
src/execo_rag/services/query/: __init__.py  agent_graph.py  agent_nodes.py  agent_state.py  answer_builder.py  (+2 more)
src/execo_rag/utils/: __init__.py  dates.py  exceptions.py  hashing.py  ids.py  money.py  text.py
(+3 files in other folders)
